<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.calculator.hchhc.calculator.ScientificActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#f5f5f5"
                android:editable="false"
                android:gravity="end|bottom"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonChange"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="end|top"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/circle"
                android:text="@string/ButtonChangeLift"
                android:textSize="30sp" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonFactorial"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/ButtonFactorial"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonPower"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/ButtonPower"
                android:textSize="25sp" />


            <Button
                android:id="@+id/buttonSQR"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/ButtonSQR"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonPI"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/ButtonPI"
                android:textAllCaps="false"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/ButtonClear"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/ButtonSin"
                android:textAllCaps="false"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonRightBracket"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/ButtonRightBracket"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonLiftBracket"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/ButtonLiftBracket"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonE"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/ButtonE"
                android:textAllCaps="false"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonDel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/ButtonDel"
                android:textAllCaps="false"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCos"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/ButtonCos"
                android:textAllCaps="false"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/Button7"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/Button8"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/Button9"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonDivide"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/ButtonDivide"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonTan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/ButtonTan"
                android:textAllCaps="false"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/Button4"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/Button5"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/Button6"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonMultiply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/ButtonMultiply"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonNapierianLogarithm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/ButtonNapierianLogarithm"
                android:textAllCaps="false"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/Button1"
                android:textSize="25sp" />


            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/Button2"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/Button3"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/ButtonMinus"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonTenLogarithm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/ButtonTenLogarithm"
                android:textAllCaps="false"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonPoint"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/ButtonPoint"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/Button0"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonEqual"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/ButtonEqual"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/ButtonAdd"
                android:textSize="25sp" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
